--- a/styles/slider.scss
+++ b/styles/slider.scss
@@ -24,6 +24,9 @@
   flex      : 0 0 100%;
   max-width : 100%;
   text-align: center;
+  p{
+    color: #e5e5e5;
+  }
 
   img {
     margin   : 0 auto;
@@ -75,13 +78,15 @@
   background-size: 100% 100%;
 }
 
-// .slider__control_prev::before {
-//   background-image: url(../img/larrow.svg);
-// }
+.slider__control_prev::before {
+  background: transparent;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
 
-// .slider__control_next::before {
-//   background-image: url(../img/rarrow.svg);
-// }
+.slider__control_next::before {
+  background: transparent;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
 
 /* styles for indicators */
 .slider__indicators {
